歌手详情页

--- a/src/common/stylus/reset.styl
+++ b/src/common/stylus/reset.styl
@@ -18,3 +18,9 @@ a
   zoom: 1
 [v-clock]
   display: none
+
+.loading-container
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
